--- a/src/alpha/sdlplugin/sdlplugin/sdlplugin.vcxproj
+++ b/src/alpha/sdlplugin/sdlplugin/sdlplugin.vcxproj
@@ -73,7 +73,7 @@
       <DataExecutionPrevention>
       </DataExecutionPrevention>
       <TargetMachine>MachineX86</TargetMachine>
-      <AdditionalLibraryDirectories>D:\d\lib\glew\lib;D:\d\lib\SDL\lib;D:\d\lib\SDL\SDL_image\lib;D:\d\lib\SDL\SDL_ttf\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\d\lib\glew\lib;D:\d\lib\SDL\lib\x86;D:\d\lib\SDL\SDL_image\lib\x86;D:\d\lib\SDL\SDL_ttf\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
